<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/black"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/result"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"

        android:textAlignment="textEnd"
        android:textColor="@color/white"
        android:textSize="50sp"
        app:layout_constraintBottom_toTopOf="@+id/linearLayout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/display" />


    <TextView
        android:id="@+id/display"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        android:textAlignment="textEnd"
        android:textColor="@color/white"
        android:textSize="50sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="150dp"


        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="horizontal">
            <com.google.android.material.button.MaterialButton
                android:id="@+id/ac"
                style="@style/Widget.MaterialComponents.FloatingActionButton"
                android:layout_width="80dp"
                android:layout_height="90dp"
                android:layout_margin="8dp"
                android:backgroundTint="#D4D4D2"
                android:text="@string/ac"
                android:textColor="@color/black"
                android:textSize="32sp"
                android:textStyle="bold"

                app:cornerRadius="40dp" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/ob"
                style="@style/Widget.MaterialComponents.FloatingActionButton"
                android:layout_width="80dp"
                android:layout_height="90dp"
                android:layout_margin="8dp"
                android:backgroundTint="#D4D4D2"
                android:text="@string/ob"

                android:textColor="@color/black"
                android:textSize="32sp"
                android:textStyle="bold"

                app:cornerRadius="40dp" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/cb"
                style="@style/Widget.MaterialComponents.FloatingActionButton"
                android:layout_width="80dp"
                android:layout_height="90dp"
                android:layout_margin="8dp"
                android:backgroundTint="#D4D4D2"
                android:text="@string/cb"
                android:textColor="@color/black"
                android:textSize="32sp"
                android:textStyle="bold"
                app:cornerRadius="40dp" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/div"
                style="@style/Widget.MaterialComponents.FloatingActionButton"
                android:layout_width="80dp"
                android:layout_height="90dp"
                android:layout_margin="8dp"
                android:backgroundTint="#FF9500"
                android:text="@string/div"
                android:textColor="@color/white"
                android:textSize="32sp"
                app:cornerRadius="40dp" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="horizontal">

            <com.google.android.material.button.MaterialButton
                android:id="@+id/n7"
                style="@style/Widget.MaterialComponents.FloatingActionButton"
                android:layout_width="80dp"
                android:layout_height="90dp"
                android:layout_margin="8dp"
                android:backgroundTint="#505050"
                android:text="@string/_7"
                android:textColor="@color/white"
                android:textSize="32sp"
                app:cornerRadius="40dp" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/n8"
                style="@style/Widget.MaterialComponents.FloatingActionButton"
                android:layout_width="80dp"
                android:layout_height="90dp"
                android:layout_margin="8dp"
                android:backgroundTint="#505050"

                android:text="@string/_8"
                android:textColor="@color/white"
                android:textSize="32sp"
                app:cornerRadius="40dp" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/n9"
                style="@style/Widget.MaterialComponents.FloatingActionButton"
                android:layout_width="80dp"
                android:layout_height="90dp"
                android:layout_margin="8dp"
                android:backgroundTint="#505050"
                android:text="@string/_9"
                android:textColor="@color/white"
                android:textSize="32sp"
                app:cornerRadius="40dp" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/mul"
                style="@style/Widget.MaterialComponents.FloatingActionButton"
                android:layout_width="80dp"
                android:layout_height="90dp"
                android:layout_margin="8dp"
                android:backgroundTint="#FF9500"
                android:text="@string/x"
                android:textColor="@color/white"
                android:textSize="32sp"
                android:textStyle="bold"
                app:cornerRadius="40dp" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="horizontal">

            <com.google.android.material.button.MaterialButton
                android:id="@+id/n4"
                style="@style/Widget.MaterialComponents.FloatingActionButton"
                android:layout_width="80dp"
                android:layout_height="90dp"
                android:layout_margin="8dp"
                android:backgroundTint="#505050"
                android:text="@string/_4"
                android:textColor="@color/white"
                android:textSize="32sp"
                app:cornerRadius="40dp" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/n5"
                style="@style/Widget.MaterialComponents.FloatingActionButton"
                android:layout_width="80dp"
                android:layout_height="90dp"
                android:layout_margin="8dp"
                android:backgroundTint="#505050"
                android:text="@string/_5"
                android:textColor="@color/white"
                android:textSize="32sp"

                app:cornerRadius="40dp" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/n6"
                style="@style/Widget.MaterialComponents.FloatingActionButton"
                android:layout_width="80dp"
                android:layout_height="90dp"
                android:layout_margin="8dp"
                android:backgroundTint="#505050"
                android:text="@string/_6"
                android:textColor="@color/white"
                android:textSize="32sp"
                app:cornerRadius="40dp" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/sub"
                style="@style/Widget.MaterialComponents.FloatingActionButton"
                android:layout_width="80dp"
                android:layout_height="90dp"
                android:layout_margin="8dp"
                android:backgroundTint="#FF9500"
                android:text="@string/sub"
                android:textColor="@color/white"
                android:textSize="32sp"
                android:textStyle="bold"
                app:cornerRadius="40dp" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="horizontal">

            <com.google.android.material.button.MaterialButton
                android:id="@+id/n1"
                style="@style/Widget.MaterialComponents.FloatingActionButton"
                android:layout_width="80dp"
                android:layout_height="90dp"
                android:layout_margin="8dp"
                android:backgroundTint="#505050"
                android:text="@string/_1"
                android:textColor="@color/white"
                android:textSize="32sp"
                app:cornerRadius="40dp" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/n2"
                style="@style/Widget.MaterialComponents.FloatingActionButton"
                android:layout_width="80dp"
                android:layout_height="90dp"
                android:layout_margin="8dp"
                android:backgroundTint="#505050"

                android:text="@string/_2"
                android:textColor="@color/white"
                android:textSize="32sp"

                app:cornerRadius="40dp" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/n3"
                style="@style/Widget.MaterialComponents.FloatingActionButton"
                android:layout_width="80dp"
                android:layout_height="90dp"
                android:layout_margin="8dp"
                android:backgroundTint="#505050"
                android:text="@string/_3"
                android:textColor="@color/white"
                android:textSize="32sp"
                app:cornerRadius="40dp" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/add"
                style="@style/Widget.MaterialComponents.FloatingActionButton"
                android:layout_width="80dp"
                android:layout_height="90dp"
                android:layout_margin="8dp"
                android:backgroundTint="#FF9500"
                android:text="@string/add"
                android:textColor="@color/white"
                android:textSize="32sp"
                android:textStyle="bold"
                app:cornerRadius="40dp" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="11dp"
            android:gravity="center"

            android:orientation="horizontal">

            <com.google.android.material.button.MaterialButton
                android:id="@+id/clear"
                style="@style/Widget.MaterialComponents.FloatingActionButton"
                android:layout_width="80dp"
                android:layout_height="90dp"
                android:layout_margin="8dp"
                android:backgroundTint="#505050"
                android:text="@string/c"
                android:textColor="@color/white"
                android:textSize="32sp"
                app:cornerRadius="40dp" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/n0"

                style="@style/Widget.MaterialComponents.FloatingActionButton"

                android:layout_width="80dp"
                android:layout_height="90dp"

                android:layout_margin="8dp"
                android:backgroundTint="#505050"


                android:text="@string/_0"
                android:textColor="@color/white"
                android:textSize="32sp"
                app:cornerRadius="40dp" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/decimal"
                style="@style/Widget.MaterialComponents.FloatingActionButton"
                android:layout_width="80dp"
                android:layout_height="90dp"
                android:layout_margin="8dp"
                android:backgroundTint="#505050"
                android:text="@string/decimal"
                android:textColor="@color/white"
                android:textSize="32sp"
                app:cornerRadius="40dp" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/equal"
                style="@style/Widget.MaterialComponents.FloatingActionButton"
                android:layout_width="80dp"
                android:layout_height="90dp"
                android:layout_margin="8dp"
                android:backgroundTint="#FF9500"
                android:text="@string/equal"
                android:textColor="@color/white"
                android:textSize="32sp"
                android:textStyle="bold"
                app:cornerRadius="40dp" />

        </LinearLayout>
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>